# pyopenfec

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  tests.py
pyopenfec/: aggregates.py  candidate.py  committee.py  filing.py  report.py  transaction.py  utils.py
tests/: test_candidate.py  test_committee.py
